--- a/Cineview/app/src/main/AndroidManifest.xml
+++ b/Cineview/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Cineview">
-
+        <activity
+            android:name=".features.account_screen.AccountScreenActivity"
+            android:exported="true" />
         <activity
             android:name=".features.splash.SplashActivity"
             android:exported="true">
