Update Build Gradle

--- a/Cineview/app/src/main/AndroidManifest.xml
+++ b/Cineview/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".features.login.LoginActivity"
+            android:name=".features.LoginActivity"
             android:exported="true" />
         <activity
             android:name=".features.MainActivity"
