--- a/Cineview/app/build.gradle
+++ b/Cineview/app/build.gradle
@@ -44,7 +44,10 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+
+    // Jetpack
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
 
     // Tests
     testImplementation 'junit:junit:4.13.2'
@@ -52,7 +55,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     // Lottie Animations
-    implementation "com.airbnb.android:lottie:4.0.0"
+    implementation "com.airbnb.android:lottie:4.1.0"
 
     // Justified TextView Lib
     implementation 'com.codesgood:justifiedtextview:1.1.0'
