--- a/Cineview/app/build.gradle
+++ b/Cineview/app/build.gradle
@@ -48,6 +48,7 @@ dependencies {
     // Jetpack
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
     // Tests
     testImplementation 'junit:junit:4.13.2'
