--- a/Cineview/app/src/main/AndroidManifest.xml
+++ b/Cineview/app/src/main/AndroidManifest.xml
@@ -23,7 +23,8 @@
             android:exported="true" />
         <activity
             android:name=".features.MainActivity"
-            android:exported="true" />
+            android:exported="true"
+            android:windowSoftInputMode="adjustPan" />
     </application>
 
 </manifest>
