--- a/Cineview/app/build.gradle
+++ b/Cineview/app/build.gradle
@@ -63,4 +63,15 @@ dependencies {
 
     //Carousel
     implementation 'com.synnapps:carouselview:0.1.5'
+
+    //HTTP
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation "com.squareup.okhttp3:logging-interceptor:4.9.0"
+
+    //Glide
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
+
 }
