--- a/Cineview/app/build.gradle
+++ b/Cineview/app/build.gradle
@@ -1,7 +1,6 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
-    id 'kotlin-android-extensions'
     id 'com.google.gms.google-services'
     id 'kotlin-kapt'
 }
@@ -46,7 +45,7 @@ dependencies {
     // Android Core
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
 
     // Jetpack
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
@@ -86,4 +85,7 @@ dependencies {
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
+
+    // koin
+    implementation("io.insert-koin:koin-android:3.1.2")
 }
