--- a/Cineview/app/src/main/AndroidManifest.xml
+++ b/Cineview/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.github.grupo6cineview.cineview">
     <uses-permission android:name="android.permission.INTERNET"/>
     <application
+        android:name=".application.App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
