--- a/Cineview/app/src/main/AndroidManifest.xml
+++ b/Cineview/app/src/main/AndroidManifest.xml
@@ -6,9 +6,9 @@
     <application
         android:name=".application.App"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/cineview_logo_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/cineview_logo_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Cineview">
         <activity
@@ -21,7 +21,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".features.LoginActivity"
+            android:name=".features.login.presentation.ui.LoginActivity"
             android:exported="true" />
         <activity
             android:name=".features.MainActivity"
