--- a/Cineview/app/build.gradle
+++ b/Cineview/app/build.gradle
@@ -64,21 +64,24 @@ dependencies {
     // Justified TextView Lib
     implementation 'com.codesgood:justifiedtextview:1.1.0'
 
-    //Carousel
+    // Carousel
     implementation 'com.synnapps:carouselview:0.1.5'
 
-    //HTTP
+    // HTTP
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation "com.squareup.okhttp3:logging-interceptor:4.9.1"
 
-    //Glide
+    // Glide
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
 
-    //Firebase
+    // Firebase
     implementation platform('com.google.firebase:firebase-bom:28.4.2')
+    implementation 'com.google.firebase:firebase-auth'
+    implementation 'com.google.android.gms:play-services-auth:19.2.0'
+    implementation 'com.facebook.android:facebook-android-sdk:[8,9)'
 
     // Room
     def room_version = "2.3.0"
@@ -86,6 +89,9 @@ dependencies {
     kapt "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
 
-    // koin
+    // Koin
     implementation("io.insert-koin:koin-android:3.1.3")
+
+    // Circle ImageView
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 }
